[gd_scene load_steps=2 format=3 uid="uid://blbm02cxi7l58"]

[ext_resource type="Script" path="res://scenes/scripts/crafting.gd" id="1_ahaob"]

[node name="Crafting" type="TabBar"]
script = ExtResource("1_ahaob")
metadata/_tab_index = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_right = 60.0
offset_bottom = 197.0

[node name="RecipeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Recipe :"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="RecipeItemList" type="ItemList" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
auto_height = true
item_count = 3
item_0/text = "a"
item_1/text = "b"
item_2/text = "c"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="IngredientVBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/IngredientVBoxContainer"]
layout_mode = 2
text = "Ingredient 1 x1"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/IngredientVBoxContainer"]
layout_mode = 2
text = "Ingredient 2 x3"

[node name="AmountHSlider" type="HSlider" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 1.0
value = 1.0

[node name="CraftButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Craft 1"

[connection signal="item_clicked" from="VBoxContainer/HBoxContainer/RecipeItemList" to="." method="_on_recipe_item_list_item_clicked"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/VBoxContainer/AmountHSlider" to="." method="_on_amount_h_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/CraftButton" to="." method="_on_craft_button_pressed"]
